# dndrag

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  eval.json  script.txt
docker/: Dockerfile.python  entrypoint.sh
docs/: lore_adelona_arvind.txt  lore_ali_hassan.txt  lore_alora_venyette.txt  lore_altarion.txt  lore_ari_crownsilver.txt  lore_caeda.txt  lore_captain_karim.txt  lore_city_aberdeen.txt  lore_city_adelanto.txt  lore_city_borilavat.txt  lore_city_diondria.txt  lore_city_doragon.txt  lore_city_elantir_forest.txt  lore_city_elmshire.txt  lore_city_emyelone.txt  lore_city_felanor.txt  lore_city_finreld.txt  lore_city_giglington.txt  lore_city_grinostrov.txt  lore_city_handletare.txt  lore_city_morvir.txt  lore_city_ostroski.txt  lore_city_rellond.txt  lore_city_sharnwick.txt  lore_city_siadiff.txt  lore_city_vormark.txt  lore_city_zanzarite.txt  lore_city_zaudfast.txt  lore_continent_anearios.txt  lore_continent_crevalon.txt  lore_continent_ikovia.txt  lore_duchess_jamila.txt  lore_elly.txt  lore_evius_hallewell.txt  lore_fiona.txt  lore_florian_reiter.txt  lore_khadja.txt  lore_king_titus.txt  lore_kuyomi.txt  lore_lady_adrastea_orvir.txt  (+21 more)
docs/Discord_extract/: extract_writing.py
scripts/: clean_pdfs.py
src/: config.rs  embed.rs  eval.rs  ingest.rs  main.rs  query.rs  serve.rs  store.rs
static/: index.html
