[package]
name = "dnd_rag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnd_rag"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
qdrant-client = "1"
pdf-extract = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
