[package]
name = "dnd_rag"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnd_rag"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# "stream" powers the token-by-token bytes_stream() in query.rs. It used to be
# enabled transitively by qdrant-client; declare it explicitly now that it's gone.
reqwest = { version = "0.12", features = ["json", "stream"] }
pdf-extract = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "v5"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
axum = "0.7"
tokio-stream = "0.1"
